--- a/ArkMaster/local.properties
+++ b/ArkMaster/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Dec 28 13:39:27 KST 2023
-sdk.dir=/Users/simsubeen/Library/Android/sdk
+#Fri Dec 29 10:44:23 KST 2023
+sdk.dir=C\:\\Users\\alstn\\AppData\\Local\\Android\\Sdk
