--- a/ArkMaster/local.properties
+++ b/ArkMaster/local.properties
@@ -4,7 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-
-#Fri Dec 29 10:44:23 KST 2023
-sdk.dir=C\:\\Users\\alstn\\AppData\\Local\\Android\\Sdk
-
+#Sat Dec 30 10:57:56 KST 2023
+sdk.dir=/Users/simsubeen/Library/Android/sdk
