--- a/ArkMaster/local.properties
+++ b/ArkMaster/local.properties
@@ -6,5 +6,5 @@
 # header note.
 
 #Fri Dec 29 10:44:23 KST 2023
-sdk.dir=C\:\\Users\\alstn\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Android_SDK
 
