--- a/ArkMaster/local.properties
+++ b/ArkMaster/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Dec 30 10:57:56 KST 2023
-sdk.dir=/Users/simsubeen/Library/Android/sdk
+#Sat Dec 30 16:17:35 KST 2023
+sdk.dir=C\:\\Android_SDK
