--- a/ArkMaster/app/src/main/AndroidManifest.xml
+++ b/ArkMaster/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
         <activity
 
-            android:name=".SignUpActivity"
+            android:name=".user.SignUpActivity"
             android:exported="false"/>
         <activity
             android:name=".DetailActivity"
@@ -26,7 +26,7 @@
             android:name=".main.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".SignInActivity"
+            android:name=".user.SignInActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
